Add admin city UI, validation and service refactor
Add admin city management: new CityController and admin-cities.html template, plus fragment admin-sidebar for shared sidebar and update existing templates to use it. Implement server-side validation and existence checks: add repository query methods (City, Country, CurrencyType) and throw InvalidDataException where appropriate. Refactor CurrencyController to use CurrencyTypeService and simplify currency operations; update CountryService, CityService and CurrencyTypeService to trim/validate inputs and call stored procedures. Improve GlobalExceptionHandler to log stack traces and show exception type/message. Remove obsolete admin-currency-add template.